[gd_scene load_steps=20 format=3 uid="uid://dbisy13t7cu7e"]

[ext_resource type="Script" path="res://Menus/menu.gd" id="1_jv4su"]
[ext_resource type="Texture2D" uid="uid://dbdy7qn6gl06v" path="res://Industria gamejam/1 Background/1.png" id="2_gyigj"]
[ext_resource type="Shader" path="res://Menus/menu.gdshader" id="3_ft434"]
[ext_resource type="Texture2D" uid="uid://bplkyl1xy4bfm" path="res://Industria gamejam/1 Background/2.png" id="4_5p5lq"]
[ext_resource type="Texture2D" uid="uid://cnw2g3cjksd0g" path="res://Industria gamejam/1 Background/3.png" id="5_wojsn"]
[ext_resource type="Texture2D" uid="uid://btlwgagqgd0jr" path="res://Industria gamejam/4.png" id="6_hpe4u"]
[ext_resource type="Texture2D" uid="uid://cyyviqxs8i4ro" path="res://Industria gamejam/1 Background/5.png" id="7_iipmp"]
[ext_resource type="FontFile" uid="uid://5okrbl2le27c" path="res://Industria gamejam/1 Background/RevMiniPixel.ttf" id="8_vhut2"]
[ext_resource type="Theme" uid="uid://cibleptmewh3g" path="res://Menus/menu_theme.tres" id="9_7hedi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nuoeq"]
shader = ExtResource("3_ft434")
shader_parameter/move_speed = -0.02

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uquuv"]
shader = ExtResource("3_ft434")
shader_parameter/move_speed = -0.03

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0yo8f"]
shader = ExtResource("3_ft434")
shader_parameter/move_speed = 0.01

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8582j"]
shader = ExtResource("3_ft434")
shader_parameter/move_speed = 0.05

[sub_resource type="LabelSettings" id="LabelSettings_t1x71"]
font = ExtResource("8_vhut2")
font_size = 40

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b5f1l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vtdna"]

[sub_resource type="Animation" id="Animation_bsjmp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_xpom5"]
resource_name = "anim_menu"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 2),
"transitions": PackedFloat32Array(0.183011, 1),
"update": 0,
"values": [Vector2(1100, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sn0w7"]
_data = {
"RESET": SubResource("Animation_bsjmp"),
"anim_menu": SubResource("Animation_xpom5")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jv4su")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(576, 324)
scale = Vector2(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color(0.654902, 0.768627, 1, 1)
texture = ExtResource("2_gyigj")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(576, 324)
scale = Vector2(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture_repeat = 2
material = SubResource("ShaderMaterial_nuoeq")
texture = ExtResource("4_5p5lq")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(576, 324)
scale = Vector2(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture_repeat = 2
material = SubResource("ShaderMaterial_uquuv")
texture = ExtResource("5_wojsn")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(576, 324)
scale = Vector2(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture_repeat = 2
material = SubResource("ShaderMaterial_0yo8f")
texture = ExtResource("6_hpe4u")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(576, 324)
scale = Vector2(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
texture_repeat = 2
material = SubResource("ShaderMaterial_8582j")
texture = ExtResource("7_iipmp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1150.0
offset_bottom = 646.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "                         "
label_settings = SubResource("LabelSettings_t1x71")

[node name="start_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_7hedi")
text = "START"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_b5f1l")

[node name="credits_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_7hedi")
text = "CREDITS"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_vtdna")

[node name="quit_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9_7hedi")
text = "QUIT"

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sn0w7")
}

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/credits_btn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
